--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "ltedtx",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "Example",
+  "description": "Example",
+  "version": "0.0.0",
+  "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.5.1",
-    "node-fetch": "^2.6.0"
+    "discord.js": "11.1.0",
+    "request": "2.81.0"
   }
 }
