--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "Example",
-  "description": "Example",
-  "version": "0.0.0",
-  "main": "bot.js",
+  "name": "discord-decclan2",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node bot.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "discord.js": "11.1.0",
-    "request": "2.81.0"
+    "discord.js": "^11.5.1",
+    "node-fetch": "^2.6.0"
   }
 }
