--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "discord-decclan2",
+  "name": "ltedtx",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node bot.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
